<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Location Map</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_general_location">Location</string>
    <string name="pref_general_location_key">location</string>
    <string name="pref_general_location_default_value">94043</string>

    <string name="pref_general_units">Temperature unit</string>
    <string name="pref_general_units_key">unit</string>
    <string name="pref_general_unit_default_value">metric</string>

    <string name="pref_general_units_imperial">imperial</string>
    <!-- Strings related to Notification preference -->
    <string name="pref_enable_notifications_key">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_last_notification">last_notification</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.mtheodor.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
</resources>
